# ai-ad_2

./: .gitignore  pyproject.toml
src/: config.py  data_utils.py  deep_model_utils.py  eda.py  evaluator.py  main.py  model_utils.py  scaling_debug.py
src/conf/: config.yaml
src/conf/hydra/: job_logging.yaml
src/conf/model/: ee.yaml  iforest.yaml  lof.yaml  lstm_ae.yaml  sgd.yaml
wandb/: latest-run
wandb/run-20251204_041801-dxb2lfrb/: run-dxb2lfrb.wandb
wandb/run-20251204_041801-dxb2lfrb/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20251204_041952-igupb0fa/: run-igupb0fa.wandb
wandb/run-20251204_041952-igupb0fa/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
