[project]
name = "chemical-process-anomaly-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "astunparse>=1.6.3",
    "attrs>=25.4.0",
    "dnspython>=2.8.0",
    "expecttest>=0.3.0",
    "fsspec>=2025.10.0",
    "hydra-core>=1.3.2",
    "hypothesis>=6.148.5",
    "ipykernel>=7.1.0",
    "joblib>=1.5.2",
    "jsonpointer>=3.0.0",
    "matplotlib>=3.10.7",
    "mkl-service>=2.6.0",
    "nbformat>=5.10.4",
    "omegaconf>=2.3.0",
    "pathlib>=1.0.1",
    "plotly>=6.5.0",
    "polars>=1.35.2",
    "pyarrow>=22.0.0",
    "python-dateutil>=2.9.0.post0",
    "python-etcd>=0.4.5",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "sortedcontainers>=2.4.0",
    "threadpoolctl>=3.6.0",
    "triton>=3.5.1",
    "types-dataclasses>=0.6.6",
    "tzdata>=2025.2",
]
